# table-game

./: CMakeLists.txt  Readme.md  main.cpp
lib/: ball.cpp  ball.h  board_cell.cpp  board_cell.h  cell_object.h  file_ops.cpp  file_ops.h  input.cpp  input.h  move_graph.cpp  move_graph.h  movement.cpp  movement.h  table.cpp  table.h  tg_types.h  tg_utils.h
tests/: CMakeLists.txt  file_ops.cpp  input.cpp  tests_config.h.in  utils.cpp
